[tool.poetry]
name = "pyhltv"
version = "0.1.0"
description = "Repository to extract information from the HLTV website"
authors = ["Rich <richelton14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11.5"
beautifulsoup4 = "^4.12.2"
undetected-chromedriver = "^3.5.3"
selenium-stealth = "^1.0.6"
pydantic = "^2.3.0"

[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.20241020"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
